--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/assets/favicon.ico" />
+  <link rel="icon" src="public/logo putih wixiz.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Font Style -->
@@ -30,7 +30,7 @@
     }
   </script>
 
-  <title>React - Azhar</title>
+  <title>wixiz.io</title>
 </head>
 
 <body class="font-poppins">
