--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" src="public/logo putih wixiz.png" type="image/x-icon" />
+  <link class="favicon" rel="icon" href="/logo putih wixiz.png" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <!-- Font Style -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
